--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,8 @@ find_package(OpenGL REQUIRED)
 
 add_library(glad STATIC glad/glad.c)
 
-add_executable(cube main.cpp)
+add_executable(cube 
+    src/main.cpp
+    src/window/GlfwEngineWindow.cpp
+)
 target_link_libraries(cube glfw OpenGL::GL glad)
