Mesh and CubeMesh.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,6 @@ add_library(glad STATIC glad/glad.c)
 add_executable(cube 
     src/main.cpp
     src/window/GlfwEngineWindow.cpp
+    src/component/CubeMesh.cpp
 )
 target_link_libraries(cube glfw OpenGL::GL glad)
