--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,62 @@
 {
+    "C_Cpp.default.compilerPath": "/usr/bin/clang++",
     "files.associations": {
-        "typeindex": "cpp",
-        "unordered_map": "cpp",
-        "__config": "cpp",
+        "__bit_reference": "cpp",
         "__hash_table": "cpp",
+        "__locale": "cpp",
+        "__node_handle": "cpp",
+        "__split_buffer": "cpp",
         "__tree": "cpp",
+        "__verbose_abort": "cpp",
         "any": "cpp",
         "array": "cpp",
+        "bitset": "cpp",
+        "cctype": "cpp",
+        "charconv": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
         "complex": "cpp",
+        "cstdarg": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
         "deque": "cpp",
+        "execution": "cpp",
         "memory": "cpp",
-        "format": "cpp",
+        "forward_list": "cpp",
         "fstream": "cpp",
-        "functional": "cpp",
+        "initializer_list": "cpp",
         "iomanip": "cpp",
+        "ios": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
         "istream": "cpp",
+        "limits": "cpp",
         "locale": "cpp",
         "map": "cpp",
         "mutex": "cpp",
+        "new": "cpp",
+        "optional": "cpp",
         "print": "cpp",
+        "queue": "cpp",
+        "ratio": "cpp",
+        "span": "cpp",
+        "sstream": "cpp",
+        "stack": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
         "string": "cpp",
-        "tuple": "cpp",
-        "utility": "cpp",
+        "string_view": "cpp",
+        "typeindex": "cpp",
+        "typeinfo": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "optional": "cpp",
-        "queue": "cpp",
-        "stack": "cpp",
-        "unordered_set": "cpp"
+        "algorithm": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/usr/bin/clang++"
 }
