Conan package manager.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,21 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.23)
 project(Engine3d)
 
-set(CMAKE_CXX_STANDARD 23)  # Или 14, 20, 23
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)  # Обязательное требование
 set(CMAKE_CXX_EXTENSIONS OFF)  # Отключаем расширения компилятора (например, GNU-расширения)
 
-find_package(glfw3 REQUIRED)
 find_package(OpenGL REQUIRED)
+find_package(glfw3 REQUIRED)
+find_package(glm REQUIRED)
 
 add_library(glad STATIC glad/glad.c)
 
 file(GLOB_RECURSE ENGINE_SOURCES 
     "engine/src/**/*.cpp"
 )
+
+message("Building with CMake version: ${CMAKE_VERSION}")
 
 add_executable(engine3d 
     ${CMAKE_SOURCE_DIR}/demo/src/main.cpp
@@ -22,4 +25,4 @@ target_include_directories(engine3d PRIVATE
     ${CMAKE_SOURCE_DIR}/glad
     ${CMAKE_SOURCE_DIR}/engine/include
 )
-target_link_libraries(engine3d glfw OpenGL::GL glad)
+target_link_libraries(engine3d OpenGL::GL glfw glm::glm glad)
