Priority systems processing.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,9 @@
         "variant": "cpp",
         "vector": "cpp",
         "algorithm": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "cinttypes": "cpp",
+        "list": "cpp",
+        "numbers": "cpp"
     },
 }
