Simple input system with logging.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
         "ranges": "cpp",
         "cinttypes": "cpp",
         "list": "cpp",
-        "numbers": "cpp"
+        "numbers": "cpp",
+        "format": "cpp"
     },
 }
