Update .clang-format, format targets.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,8 @@
         "cinttypes": "cpp",
         "list": "cpp",
         "numbers": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "__config": "cpp",
+        "tuple": "cpp"
     },
 }
