All components made structs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,8 @@
         "numbers": "cpp",
         "format": "cpp",
         "__config": "cpp",
-        "tuple": "cpp"
+        "tuple": "cpp",
+        "condition_variable": "cpp",
+        "set": "cpp"
     },
 }
