--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,8 @@
         "csignal": "cpp",
         "future": "cpp",
         "regex": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "__assert": "cpp",
+        "chrono": "cpp"
     },
 }
