--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,8 @@
         "regex": "cpp",
         "type_traits": "cpp",
         "__assert": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "cstddef": "cpp",
+        "iterator": "cpp"
     },
 }
