Repeats for tweens.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
         "__assert": "cpp",
         "chrono": "cpp",
         "cstddef": "cpp",
-        "iterator": "cpp"
+        "iterator": "cpp",
+        "thread": "cpp"
     },
 }
